--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
     "name": "freex",
     "scripts": {
-        "build:frontend": "cd frontend && npm install && npm run build",
-        "build:backend": "cd backend && npm install && npm run build",
-        "build": "npm run build:frontend && npm run build:backend",
-        "start:frontend": "cd frontend && npm run start",
-        "start:backend": "cd backend && npm run start",
-        "start:prod": "concurrently \"npm run start:frontend\" \"npm run start:backend\""
+        "build:front": "cd front && npm install && npm run build",
+        "build:server": "cd server && npm install && npm run build",
+        "build": "npm run build:front && npm run build:server",
+        "start:front": "cd front && npm run start",
+        "start:server": "cd server && npm run start",
+        "start:prod": "npm run build && concurrently \"npm run start:front\" \"npm run start:server\""
       },
     "dependencies": {
       "concurrently": "^7.0.0"
