--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "scripts": {
     "build:front": "cd front && npm install && npm run build",
     "build:server": "cd server && npm install && npm run build",
-    "build": "concurrently \"npm run build:front\" && \"npm run build:server\"",
+    "build": "concurrently \"npm run build:front\" \"npm run build:server\"",
     "start:front": "cd front && npm run start",
     "start:server": "cd server && npm run start",
     "start:prod": "concurrently \"npm run start:front\" \"npm run start:server\""
