package.json update commands

--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
     "build:front": "cd front && npm install && npm run build",
     "build:server": "cd server && npm install && npm run build",
     "build": "concurrently \"npm run build:front\" \"npm run build:server\"",
-    "start:front": "cd front && npm run start",
-    "start:server": "cd server && npm run start",
+    "start:front": "cd front && PORT=3000 npm run start",
+    "start:server": "cd server && PORT=8081 npm run start",
     "start:prod": "concurrently \"npm run start:front\" \"npm run start:server\""
   },
   "dependencies": {
